--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "aurelia-animator-css": "^1.0.4",
     "aurelia-bootstrapper": "^2.2.0",
     "bluebird": "^3.5.1",
+    "bootstrap": "^4.1.1",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
     "requirejs": "^2.3.5",
     "text": "github:requirejs/text#latest"
   },
