--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "aurelia-animator-css": "^1.0.4",
     "aurelia-bootstrapper": "^2.2.0",
     "aurelia-fetch-client": "^1.3.1",
+    "aurelia-validation": "^1.1.3",
     "bluebird": "^3.5.1",
     "bootstrap": "^4.1.1",
+    "element-closest": "^2.0.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "requirejs": "^2.3.5",
