--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "element-closest": "^2.0.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
+    "moment": "^2.22.2",
     "requirejs": "^2.3.5",
     "text": "github:requirejs/text#latest",
     "whatwg-fetch": "^2.0.4"
